--- a/package.json
+++ b/package.json
@@ -2,9 +2,17 @@
   "name": "taskpro-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src --ext .ts",
+    "start": "node ./dist/index.js",
+    "type-check": "tsc --noEmit",
+    "dev": "tsx watch src/index.ts",
+    "build-docs": "redocly bundle docs/openapi.yaml --ext json -o docs/swagger.json",
+    "preview-docs": "redocly preview-docs",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "Dmytro Ostapchuk <adrenalinbd@gmail.com>",
@@ -13,16 +21,24 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.21.2",
+    "http-errors": "^2.0.0",
     "joi": "^17.13.3",
     "pino-http": "^10.5.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.29.0",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.3",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "@typescript-eslint/eslint-plugin": "^8.34.1",
+    "@typescript-eslint/parser": "^8.34.1",
+    "eslint": "^9.29.0",
+    "globals": "^16.2.0",
+    "pino-pretty": "^13.0.0",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.34.1"
   }
 }
